# breast-cancer-assessment-system

./: .gitignore  AGENTS.md  README.md  demo.md  pyproject.toml
backend/: .env.example  AGENTS.md  spec.md
backend/app/: database.py  main.py
backend/app/models/: assessment.py  contact_request.py  event.py  history_dialogue.py
backend/app/schemas/: assessment.py  contact_request.py  event.py
backend/app/services/: assessment_service.py  contact_service.py  mcp_service.py
backend/tests/: test_assessments.py  test_conversation.py  test_debug.py  test_new_endpoints.py
frontend/: AGENTS.md  package-lock.json  package.json  spec.md  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: ChatPage.tsx  HistoryPage.tsx  InputPage.tsx  ResultPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: eventLogger.ts  session.ts
mcp/: AGENTS.md  agent.py  server.py  spec.md
mcp/agents/: assessment_agent.py  base.py  config.py  learning_agent.py  master.py  memory_agent.py  orchestrator.py  rag_agent.py  reviewer_agent.py  schemas.py
mcp/agents/memory/: __init__.py  compressor.py  patient_state.json  store.py
mcp/agents/tools/: __init__.py  rag_tool.py  (+8 more)
mcp/data/: build_index.py  rag_documents.json
mcp/scripts/: agents.py  parser.py  schemas.py
mcp/tests/: test_api.py  test_api.sh  test_build_index.py  test_json_response.py  test_logic.py  test_memory_agent_loop.py  test_orchestrator.py  test_server.py  test_skills.py
mcp/utils/: event_logger.py
(+26 files in other folders)
