[project]
name = "shenzhi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.17",
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.4",
    "outlines>=1.2.12",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "qwen-agent>=0.0.34",
    "soundfile>=0.13.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
