[project]
name = "shenzhi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioconsole>=0.8.2",
    "alembic>=1.18.4",
    "dashscope>=1.25.17",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langsmith>=0.7.34",
    "numpy>=2.4.4",
    "outlines>=1.2.12",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qwen-agent>=0.0.34",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
